refcount and delete KDirWatchPrivate instances

this adds reference counting for frontend users of KDirWatchPrivate
instances. it allows us to clean up the thread-local private object when
no more frontend objects are left.

this enables heavily threaded applications to release inotify instances
for threads that aren't deleted but instead returned to a pool.

BUG: 423928
FIXED-IN: 5.75